create scaffold and basic code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div id="app">
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
