--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="#" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Beatriz Rodríguez Maya">
+    <meta name="description" content="Developer Portfolio">
     <title>From Marketing to Developing ✨</title>
   </head>
   <body>
-    <div id="app">
     <header></header>
     <main></main>
     <footer></footer>
-    </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
