--- a/index.html
+++ b/index.html
@@ -2,16 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="#" />
+    <link rel="icon" type="image/svg+xml" href="/images/personal-img.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Beatriz Rodríguez Maya">
     <meta name="description" content="Developer Portfolio">
     <title>From Marketing to Developing ✨</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <ul class="ul-navbar">
+        <li><a href="/home" class="page-link" id="home-link">Home</a></li>
+        <li><a href="/experience" class="page-link" id="experience-link">Experience</a></li>
+        <li><a href="/projects" class="page-link" id="projects-link">Projects</a></li>
+        </ul>
+        </nav>
+    </header>
     <main></main>
-    <footer></footer>
+    <footer>  
+    <p>
+   Portfolio Project by Beatriz Rodríguez for 
+   <a href="https://www.rockthecode.es/" target="_blank" rel="noopener noreferrer">Rock{theCode}</a>
+      </p>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
