add filter in projects

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <footer>
       <p>
         Portfolio Project by Beatriz Rodríguez for
-        <a href="https://www.rockthecode.es/" target="_blank" rel="noopener noreferrer"
+        <a href="https://www.rockthecode.es/" target="blank" rel="noopener noreferrer"
           >Rock{theCode}</a
         >
       </p>
