organize code in components and utils

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Beatriz Rodríguez Maya" />
     <meta name="description" content="Developer Portfolio" />
-    <title>From Marketing to Developing ✨</title>
+    <title>To Developing from Marketing ✨</title>
   </head>
   <body>
     <header>
