--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   </head>
   <body>
     <header>
-      <nav>
+     
+      <nav class="hide">
         <ul class="ul-navbar">
           <li><a href="/home" class="page-link" id="home-link">Home</a></li>
           <li><a href="/experience" class="page-link" id="experience-link">Experience</a></li>
           <li><a href="/projects" class="page-link" id="projects-link">Projects</a></li>
         </ul>
       </nav>
+      <span class="mobile-menu" id="mobile-menu">&#9776;</span>
     </header>
     <main></main>
     <footer>
