--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <main></main>
     <footer>
       <p>
-        Portfolio Project by Beatriz Rodríguez for
+        Portfolio Project by 
+        <a href="https://www.linkedin.com/in/beatrizrodriguezmaya/" target="blank" rel="noopener noreferrer"
+          >Beatriz Rodríguez</a
+        >
+         for
         <a href="https://www.rockthecode.es/" target="blank" rel="noopener noreferrer"
           >Rock{theCode}</a
         >
