add animation to tech icons

--- a/index.html
+++ b/index.html
@@ -9,17 +9,7 @@
     <title>To Developing from Marketing ✨</title>
   </head>
   <body>
-    <header>
-     
-      <nav class="hide">
-        <ul class="ul-navbar">
-          <li><a href="/home" class="page-link" id="home-link">Home</a></li>
-          <li><a href="/experience" class="page-link" id="experience-link">Experience</a></li>
-          <li><a href="/projects" class="page-link" id="projects-link">Projects</a></li>
-        </ul>
-      </nav>
-      <span class="mobile-menu" id="mobile-menu">&#9776;</span>
-    </header>
+    <header></header>
     <main></main>
     <footer>
       <p>
