update experience cards and create about content

--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
   <body>
     <header></header>
     <main></main>
-    <footer>
-      <p>
-        Portfolio Project by 
-        <a href="https://www.linkedin.com/in/beatrizrodriguezmaya/" target="blank" rel="noopener noreferrer"
-          >Beatriz Rodríguez</a
-        >
-         for
-        <a href="https://www.rockthecode.es/" target="blank" rel="noopener noreferrer"
-          >Rock{theCode}</a
-        >
-      </p>
-    </footer>
+    <footer></footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
