--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/images/personal-img.jpg" /> -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://res.cloudinary.com/dnlceaase/image/upload/v1703078904/Imagen1_f0vzzt.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Beatriz Rodríguez Maya" />
     <meta name="description" content="Developer Portfolio" />
