update personal imnage

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://res.cloudinary.com/dnlceaase/image/upload/v1703078904/Imagen1_f0vzzt.png"
+      href="https://res.cloudinary.com/dnlceaase/image/upload/v1725301760/WhatsApp_Image_2024-08-20_at_20.24.08_3_1_ag3l5w.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Beatriz Rodríguez Maya" />
